ifcviewer/ifcengine/include/ifcengine.h

#define		sdaiSTRING				sdaiREAL + 1
typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	int_t			SchemaDeclIterator;
typedef	int_t			SchemaDecl;
typedef	int_t			* SchemaAggr;
void			DECL STDC	sdaiSaveModelAsJsonBNUnicode(
									SdaiModel				model,
									const wchar_t			* fileName
								);
static	inline	void	sdaiSaveModelAsJsonBNUnicode(
								SdaiModel				model,
								wchar_t					* fileName
							)
{
	return	sdaiSaveModelAsJsonBNUnicode(
					model,
					(const wchar_t*) fileName
				);
}
bool			DECL STDC	engiSaveSchemaBN(
									SdaiModel				model,
									const char				* filePath
								);
static	inline	bool	engiSaveSchemaBN(
								SdaiModel				model,
								char					* filePath
							)
{
	return	engiSaveSchemaBN(
					model,
					(const char*) filePath
				);
}
bool			DECL STDC	engiSaveSchemaBNUnicode(
									SdaiModel				model,
									const wchar_t			* filePath
								);
static	inline	bool	engiSaveSchemaBNUnicode(
								SdaiModel				model,
								wchar_t					* filePath
							)
{
	return	engiSaveSchemaBNUnicode(
					model,
					(const wchar_t*) filePath
				);
}
void			DECL STDC	sdaiCloseModel(
									SdaiModel				model
								);
void			DECL STDC	setPrecisionDoubleExport(
									SdaiModel				model,
									int_t					precisionCap,
									int_t					precisionRound,
									bool					clean
								);
SchemaDeclIterator	DECL STDC	engiGetNextDeclarationIterator(
									SdaiModel				model,
									SchemaDeclIterator		iterator
								);
SchemaDecl		DECL STDC	engiGetDeclarationFromIterator(
									SdaiModel				model,
									SchemaDeclIterator		iterator
								);
enum_express_declaration	DECL STDC	engiGetDeclarationType(
									SchemaDecl				declaration
								);
const char		DECL * STDC	engiGetEnumerationElement(
									SchemaDecl				enumeration,
									SdaiInteger				index
								);
SchemaDecl		DECL STDC	engiGetSelectElement(
									SchemaDecl				select,
									SdaiInteger				index
								);
enum_express_attr_type	DECL STDC	engiGetDefinedType(
									SchemaDecl				definedType,
									SchemaDecl				* referencedDeclaration,
									SchemaAggr				* aggregationDescriptor
								);
SdaiEntity		DECL STDC	sdaiGetEntity(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiEntity	sdaiGetEntity(
									SdaiModel				model,
									char					* entityName
								)
{
	return	sdaiGetEntity(
					model,
					(const char*) entityName
				);
}
SdaiModel		DECL STDC	engiGetEntityModel(
									SdaiEntity				entity
								);
SdaiAttr		DECL STDC	engiGetEntityArgument(
									SdaiEntity				entity,
									const char				* argumentName
								);
static	inline	SdaiAttr	engiGetEntityArgument(
									SdaiEntity				entity,
									char					* argumentName
								)
{
	return	engiGetEntityArgument(
					entity,
					(const char*) argumentName
				);
}
int_t			DECL STDC	engiGetEntityAttributeIndex(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	int_t	engiGetEntityAttributeIndex(
								SdaiEntity				entity,
								char					* attributeName
							)
{
	return	engiGetEntityAttributeIndex(
					entity,
					(const char*) attributeName
				);
}
int_t			DECL STDC	engiGetEntityAttributeIndexEx(
									SdaiEntity				entity,
									const char				* attributeName,
									bool					countedWithParents,
									bool					countedWithInverse
								);
static	inline	int_t	engiGetEntityAttributeIndexEx(
								SdaiEntity				entity,
								char					* attributeName,
								bool					countedWithParents,
								bool					countedWithInverse
							)
{
	return	engiGetEntityAttributeIndexEx(
					entity,
					(const char*) attributeName,
					countedWithParents,
					countedWithInverse
				);
}
int_t			DECL STDC	engiGetEntityArgumentIndex(
									SdaiEntity				entity,
									const char				* argumentName
								);
static	inline	int_t	engiGetEntityArgumentIndex(
								SdaiEntity				entity,
								char					* argumentName
							)
{
	return	engiGetEntityArgumentIndex(
					entity,
					(const char*) argumentName
				);
}
const char		DECL * STDC	engiGetEntityArgumentName(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									const char				** argumentName
								);
static	inline	const char	* engiGetEntityArgumentName(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									char					** argumentName
								)
{
	return	engiGetEntityArgumentName(
					entity,
					index,
					valueType,
					(const char**) argumentName
				);
}
static	inline	const char	* engiGetEntityArgumentName(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType
								)
{
	return	engiGetEntityArgumentName(
					entity,
					index,
					valueType,
					(const char**) nullptr				
				);
}
void			DECL STDC	engiGetEntityArgumentType(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		* argumentType
								);
SdaiInteger		DECL STDC	engiGetEntityCount(
									SdaiModel				model
								);
SdaiEntity		DECL STDC	engiGetEntityElement(
									SdaiModel				model,
									SdaiInteger				index
								);
SdaiAggr		DECL STDC	sdaiGetEntityExtent(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiAggr		DECL STDC	sdaiGetEntityExtentBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiAggr	sdaiGetEntityExtentBN(
									SdaiModel				model,
									char					* entityName
								)
{
	return	sdaiGetEntityExtentBN(
					model,
					(const char*) entityName
				);
}