ifcviewer/ifcengine/include/IfcEngine.cs


		/// <summary>
		///		sdaiSaveModelAsJsonBNUnicode                            (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelAsJsonBNUnicode.html)
		///
		///	This function saves the model as JSON according to IFC4's way of JSON serialization (wchar, i.e. Unicode file name).
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiSaveModelAsJsonBNUnicode")]
		public static extern void sdaiSaveModelAsJsonBNUnicode(int_t model, string fileName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiSaveModelAsJsonBNUnicode")]
		public static extern void sdaiSaveModelAsJsonBNUnicode(int_t model, byte[] fileName);

		/// <summary>
		///		engiSaveSchemaBN                                        (http://rdf.bg/ifcdoc/CS64/engiSaveSchemaBN.html)
		///
		///	This function saves the schema.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiSaveSchemaBN")]
		public static extern byte engiSaveSchemaBN(int_t model, string filePath);

		[DllImport(IFCEngineDLL, EntryPoint = "engiSaveSchemaBN")]
		public static extern byte engiSaveSchemaBN(int_t model, byte[] filePath);

		/// <summary>
		///		engiSaveSchemaBNUnicode                                 (http://rdf.bg/ifcdoc/CS64/engiSaveSchemaBNUnicode.html)
		///
		///	This function saves the schema (wchar, i.e. Unicode file name).
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiSaveSchemaBNUnicode")]
		public static extern byte engiSaveSchemaBNUnicode(int_t model, string filePath);

		[DllImport(IFCEngineDLL, EntryPoint = "engiSaveSchemaBNUnicode")]
		public static extern byte engiSaveSchemaBNUnicode(int_t model, byte[] filePath);

		/// <summary>
		///		sdaiCloseModel                                          (http://rdf.bg/ifcdoc/CS64/sdaiCloseModel.html)
		///
		///	This function closes the model. After this call no instance handles will be available including all
		///	handles referencing the geometry of this specific file, in default compilation the model itself will
		///	be known in the kernel, however known to be disabled. Calls containing the model reference will be
		///	protected from crashing when called.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiCloseModel")]
		public static extern void sdaiCloseModel(int_t model);

		/// <summary>
		///		setPrecisionDoubleExport                                (http://rdf.bg/ifcdoc/CS64/setPrecisionDoubleExport.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setPrecisionDoubleExport")]
		public static extern void setPrecisionDoubleExport(int_t model, int_t precisionCap, int_t precisionRound, byte clean);

        //
        //  Schema Reading API Calls
        //

		/// <summary>
		///		engiGetNextDeclarationIterator                          (http://rdf.bg/ifcdoc/CS64/engiGetNextDeclarationIterator.html)
		///
		///	This call returns next iterator of EXPRESS schema declarations.
		///	If the input iterator is NULL it returns first iterator.
		///	If the input iterator is last it returns NULL.
		///	Use engiGetDeclarationFromIterator to access EXPRESS declaration data. 
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetNextDeclarationIterator")]
		public static extern int_t engiGetNextDeclarationIterator(int_t model, int_t iterator);

		/// <summary>
		///		engiGetDeclarationFromIterator                          (http://rdf.bg/ifcdoc/CS64/engiGetDeclarationFromIterator.html)
		///
		///	This call returns handle to the EXPRESS schema declarations from iterator.
		///	It may be a handle to entity, or enumeration, select or type definition, use engiGetDeclarationType to recognize
		///	Use engiGetNextDeclarationIterator to get iterator.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetDeclarationFromIterator")]
		public static extern int_t engiGetDeclarationFromIterator(int_t model, int_t iterator);

		/// <summary>
		///		engiGetDeclarationType                                  (http://rdf.bg/ifcdoc/CS64/engiGetDeclarationType.html)
		///
		///	This call returns a type of the EXPRESS schema declarations from its handle.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetDeclarationType")]
		public static extern enum_express_declaration engiGetDeclarationType(int_t declaration);

		/// <summary>
		///		engiGetEnumerationElement                               (http://rdf.bg/ifcdoc/CS64/engiGetEnumerationElement.html)
		///
		///	This call returns a name of the enumaration element with the given index (zero based)
		///	It returns NULL if the index out of range
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEnumerationElement")]
		public static extern IntPtr engiGetEnumerationElement(int_t enumeration, int_t index);

		/// <summary>
		///		engiGetSelectElement                                    (http://rdf.bg/ifcdoc/CS64/engiGetSelectElement.html)
		///
		///	This call returns a declaration handle of the select element with the given index (zero based)
		///	It returns 0 if the index out of range
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetSelectElement")]
		public static extern int_t engiGetSelectElement(int_t select, int_t index);

		/// <summary>
		///		engiGetDefinedType                                      (http://rdf.bg/ifcdoc/CS64/engiGetDefinedType.html)
		///
		///	This call returns a simple type for defined type handle and can inquire referenced type, if any
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetDefinedType")]
		public static extern enum_express_attr_type engiGetDefinedType(int_t definedType, out int_t referencedDeclaration, out int_t aggregationDescriptor);

		/// <summary>
		///		sdaiGetEntity                                           (http://rdf.bg/ifcdoc/CS64/sdaiGetEntity.html)
		///
		///	This call retrieves a handle to an entity based on a given entity name.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetEntity")]
		public static extern int_t sdaiGetEntity(int_t model, string entityName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetEntity")]
		public static extern int_t sdaiGetEntity(int_t model, byte[] entityName);

		/// <summary>
		///		engiGetEntityModel                                      (http://rdf.bg/ifcdoc/CS64/engiGetEntityModel.html)
		///
		///	This call retrieves a model based on a given entity handle.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityModel")]
		public static extern int_t engiGetEntityModel(int_t entity);

		/// <summary>
		///		engiGetEntityArgument                                   (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgument.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityArgument")]
		public static extern int_t engiGetEntityArgument(int_t entity, string argumentName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityArgument")]
		public static extern int_t engiGetEntityArgument(int_t entity, byte[] argumentName);

		/// <summary>
		///		engiGetEntityAttributeIndex                             (http://rdf.bg/ifcdoc/CS64/engiGetEntityAttributeIndex.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityAttributeIndex")]
		public static extern int_t engiGetEntityAttributeIndex(int_t entity, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityAttributeIndex")]
		public static extern int_t engiGetEntityAttributeIndex(int_t entity, byte[] attributeName);

		/// <summary>
		///		engiGetEntityAttributeIndexEx                           (http://rdf.bg/ifcdoc/CS64/engiGetEntityAttributeIndexEx.html)
		///
		///	..
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityAttributeIndexEx")]
		public static extern int_t engiGetEntityAttributeIndexEx(int_t entity, string attributeName, byte countedWithParents, byte countedWithInverse);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityAttributeIndexEx")]
		public static extern int_t engiGetEntityAttributeIndexEx(int_t entity, byte[] attributeName, byte countedWithParents, byte countedWithInverse);

		/// <summary>
		///		engiGetEntityArgumentIndex                              (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgumentIndex.html)
		///
		///	DEPRECATED use engiGetEntityAttributeIndex
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityArgumentIndex")]
		public static extern int_t engiGetEntityArgumentIndex(int_t entity, string argumentName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityArgumentIndex")]
		public static extern int_t engiGetEntityArgumentIndex(int_t entity, byte[] argumentName);

		/// <summary>
		///		engiGetEntityArgumentName                               (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgumentName.html)
		///
		///	This call can be used to retrieve the name of the n-th argument of the given entity. Arguments of parent entities are included in the index. Both direct and inverse arguments are included.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityArgumentName")]
		public static extern void engiGetEntityArgumentName(int_t entity, int_t index, int_t valueType, out IntPtr argumentName);

		public static string engiGetEntityArgumentName(int_t entity, int_t index)
		{
			IntPtr argumentName = IntPtr.Zero;
			engiGetEntityArgumentName(entity, index, sdaiSTRING, out argumentName); //marshaline expects ANSI
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(argumentName);
		}

		/// <summary>
		///		engiGetEntityArgumentType                               (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgumentType.html)
		///
		///	This call can be used to retrieve the type of the n-th argument of the given entity. In case of a select argument no relevant information is given by this call as it depends on the instance. Arguments of parent entities are included in the index. Both direct and inverse arguments are included.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityArgumentType")]
		public static extern void engiGetEntityArgumentType(int_t entity, int_t index, out int_t argumentType);

		/// <summary>
		///		engiGetEntityCount                                      (http://rdf.bg/ifcdoc/CS64/engiGetEntityCount.html)
		///
		///	Returns the total number of entities within the loaded schema.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityCount")]
		public static extern int_t engiGetEntityCount(int_t model);

		/// <summary>
		///		engiGetEntityElement                                    (http://rdf.bg/ifcdoc/CS64/engiGetEntityElement.html)
		///
		///	This call returns a specific entity based on an index, the index needs to be 0 or higher but lower then the number of entities in the loaded schema.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityElement")]
		public static extern int_t engiGetEntityElement(int_t model, int_t index);

		/// <summary>
		///		sdaiGetEntityExtent                                     (http://rdf.bg/ifcdoc/CS64/sdaiGetEntityExtent.html)
		///
		///	This call retrieves an aggregation that contains all instances of the entity given.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetEntityExtent")]
		public static extern int_t sdaiGetEntityExtent(int_t model, int_t entity);

		/// <summary>
		///		sdaiGetEntityExtentBN                                   (http://rdf.bg/ifcdoc/CS64/sdaiGetEntityExtentBN.html)
		///
		///	This call retrieves an aggregation that contains all instances of the entity given.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetEntityExtentBN")]
		public static extern int_t sdaiGetEntityExtentBN(int_t model, string entityName);
